# cursos

./: .gitignore
aprenda_go_do_zero/01-pacotes/: go.mod  main.go
aprenda_go_do_zero/02-variaveis/: variaveis.go
aprenda_go_do_zero/03-tipos/: tipos.go
aprenda_go_do_zero/04-funcao/: funcao.go
aprenda_go_do_zero/05-operadores/: operadores.go
aprenda_go_do_zero/06-structs/: structs.go
aprenda_go_do_zero/07-heranca-so-que-nao/: struct.go
chatgpt_django/modulo_1/meuprojeto/: pyproject.toml
chatgpt_django/modulo_1/meuprojeto/paginainicial/: views.py
chatgpt_django/modulo_1/meuprojeto/setup/: settings.py  urls.py
corp_manager/: .env_exemple  docker-compose.yml  pyproject.toml
desenvolvimento_web_com_django_sistema_coporativo/: pyproject.toml
desenvolvimento_web_com_django_sistema_coporativo/setup/: settings.py  urls.py
django_pro_do_zero_ao_deploy/my_blog/: .env.exemple  docker-compose.yml  pyproject.toml
django_pro_do_zero_ao_deploy/my_blog/apps/base/: admin.py  models.py  urls.py  views.py
django_pro_do_zero_ao_deploy/my_blog/apps/base/migrations/: 0001_initial.py
django_pro_do_zero_ao_deploy/my_blog/apps/base/static/base/css/: article-card.css  base.css
django_pro_do_zero_ao_deploy/my_blog/apps/base/static/base/js/: base.js
django_pro_do_zero_ao_deploy/my_blog/apps/base/templates/base/pages/: base.html  index.html
django_pro_do_zero_ao_deploy/my_blog/apps/base/templates/base/partials/: article-card.html  head.html  header.html  menu-dialog-mobile.html  nav-desktop.html  nav-mobile.html  search-dialog.html
django_pro_do_zero_ao_deploy/my_blog/setup/: settings.py  urls.py
python_luiz_otavio_miranda/secao_3_inicio_na_programacao_com_python_logica_de_programacao_basica/: aula1.py  aula2.py  aula3.py  pyproject.toml  teste.py
(+460 files in other folders)
