[project]
name = "desenvolvimento-web-com-django-sistema-coporativo"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]


[tool.ruff.lint]
extend-select = ["E501"]

[tool.ruff]
line-length = 80
exclude =  ["./apps/**/migrations"]

[tool.ruff.format]
quote-style = "single"