[project]
name = "meuprojeto"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.5",
]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]

[tool.ruff.lint]
extend-select = ["E501"]

[tool.ruff]
line-length = 80
exclude =  ["./apps/**/migrations", ".venv"]

[tool.ruff.format]
quote-style = "single"
